--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.17.1"
+    "react-native-screens": "^4.17.1",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
