--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,3 +117,9 @@ dependencies {
         implementation jscFlavor
     }
 }
+react {
+  project.ext.vectoricons = [
+      iconFontNames: ['MaterialCommunityIcons.ttf', 'FontAwesome.ttf', 'AntDesign.ttf']
+  ]
+  apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+}
