--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.4",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/elements": "^2.7.0",
     "@react-navigation/native": "^7.1.18",
