--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "^2.11.4",
+    "@react-native-vector-icons/material-design-icons": "^12.4.0",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/elements": "^2.7.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-vector-icons": "^10.3.0"
   },
