--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@react-native-vector-icons/material-design-icons": "^12.4.0",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/bottom-tabs": "^7.8.2",
+    "@react-navigation/drawer": "^7.7.2",
     "@react-navigation/elements": "^2.7.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-table-component": "^1.2.2",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
