--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.7.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
+    "@react-navigation/stack": "^7.6.3",
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-gesture-handler": "^2.29.1",
