--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.5.1",
     "@react-navigation/stack": "^7.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-drawer-layout": "^4.2.0",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "^4.1.3",
+    "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
     "react-native-table-component": "^1.2.2",
