--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@react-navigation/bottom-tabs": "^7.8.2",
     "@react-navigation/drawer": "^7.7.2",
     "@react-navigation/elements": "^2.7.0",
-    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.5.1",
     "@react-navigation/stack": "^7.6.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-charts-wrapper": "^0.6.0",
     "react-native-drawer-layout": "^4.2.0",
     "react-native-gesture-handler": "^2.29.1",
     "react-native-paper": "^5.14.5",
